# experiments

./: Cargo.toml  README.md
bdk_electrum_c/: Cargo.toml
bdk_electrum_c/src/: lib.rs
bdk_electrum_streaming/: Cargo.toml  README.md
bdk_electrum_streaming/src/: async_client.rs  blocking_client.rs  chain_job.rs  derived_spk_tracker.rs  lib.rs  req.rs  spk_job.rs  state.rs
bdk_electrum_streaming/tests/: env.rs
e_bdk_electrum/: Cargo.toml
e_bdk_electrum/src/: lib.rs
e_electrum_client/: Cargo.toml  README.md
e_electrum_client/src/: client.rs  custom_serde.rs  io.rs  lib.rs  pending_request.rs  request.rs  response.rs  rpc_types.rs  service.rs  state.rs
e_electrum_client/tests/: synopsis.rs
electrum/: Cargo.toml
electrum/src/: lib.rs
electrum_c/: Cargo.toml
electrum_c/src/: client.rs  custom_serde.rs  notification.rs  request.rs  state.rs
electrum_c/tests/: synopsis.rs
electrum_cliente/: Cargo.toml
electrum_cliente/src/: hash_types.rs  notification.rs  response.rs
electrum_cliente/tests/: synopsis.rs
electrum_streaming/: Cargo.toml
electrum_streaming/src/: batch_request.rs  client.rs  io.rs  lib.rs  pending_request.rs  request.rs  response.rs  state.rs
electrum_streaming/tests/: synopsis.rs
