[package]
name = "bdk_electrum_streaming"
version = "0.4.0"
description = "Experimental but sane BDK electrum client by @evanlinjin."
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/evanlinjin/experiments"
documentation = "https://docs.rs/bdk_electrum_streaming"
readme = "README.md"

[dependencies]
futures = "0.3"
futures-timer = "3"
anyhow = "1"
bdk_core = "0.6"
miniscript = { version = "12.0.0" }
electrum_streaming_client = { version = "0.4" }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
bdk_testenv = "0.13.0"
bdk_chain = "0.23.0"
tokio = { version = "1", features = ["time", "net", "rt", "macros"]}
tokio-util = { version = "0.7.15", features = ["compat"] }
tracing-subscriber = "0.3"
