[package]
name = "e_electrum_client"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitcoin = { version = "0.32", features = ["serde"] }

[dev-dependencies]
async-std = "1.13.0"
bdk_testenv = "0.9.0"
futures = { version = "0.3", features = ["executor"] }
