[package]
name = "electrum_streaming"
version = "0.2.0"
description = "Experimental but sane electrum client by @evanlinjin."
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.63"
repository = "https://github.com/evanlinjin/experiments"
documentation = "https://docs.rs/electrum_streaming"
readme = "README.md"

[dependencies]
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitcoin = { version = "0.32", features = ["serde"] }

[dev-dependencies]
async-std = "1.13.0"
bdk_testenv = "0.11"
futures = { version = "0.3", features = ["thread-pool"] }
